# GraspGen-couliglig

./: .dockerignore  .gitignore  COULIGLIG_PROJECT_SUMMARY.md  COULIGLIG_SCALEUP_TASK.md  SETUP_NOTES.md  pyproject.toml  requirements.txt  setup.py
client-server/: graspgen_server.py
config/grippers/: couliglig_gripper.py  couliglig_gripper.yaml  couliglig_scaled.py  couliglig_scaled.yaml
docker/: SAM3_SETUP.md  compose.sam3.yml  graspgen_cuda121.dockerfile  sam3.dockerfile  serve.dockerfile
grasp_gen/dataset/: renderer.py
grasp_gen/serving/: __init__.py  rpc_server.py  rpc_server_sam3.py  sam2_client.py  sam2_server.py  sam3_client.py  sam3_server.py  zmq_server.py
runs/: finetune_couliglig_scaled_gen.sh  infer_couliglig_scaled_gen.sh  train_couliglig_dis.sh  train_couliglig_gen.sh  train_couliglig_scaled_dis.sh  train_couliglig_scaled_gen.sh
scripts/: bake_grasp_scene_realgripper.py  bake_grasp_scene_usd.py  config.yaml  convert_datagen_to_graspgen.py  convert_pred_to_isaac.py  create_couliglig_grasp_scene.py  eval_couliglig_gen.py  graspgen_to_isaac.py  inference_graspgen.py  push_meshcat.py  push_meshcat_collision.py  push_meshcat_tcp.py  push_one.py  render_grasp_meshcat.py  render_gripper_check.py  replay_grasp_meshcat.py  replay_isaac_traj.py  scale_objects.py  train_graspgen.py  verify_converted_grasp.py  verify_scaled_grasp.py  view_cloud.py
urdf/gripper/: config.json  robot.urdf
urdf/gripper/assets/: end_effector.part  end_effector.stl  finger.part  finger.stl
weights/: graspgen_couliglig.yml  graspgen_robotiq_2f_140.yml
