[build-system]
requires = ["setuptools>=45,<78", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "grasp_gen"
version = "1.0.0"
description = "GraspGen: A Diffusion-based Framework for 6-DOF Grasping"
authors = [
    {name = "Adithya Murali", email = "admurali@nvidia.com"},
]
maintainers = [
    {name = "Adithya Murali", email = "admurali@nvidia.com"},
]
license = {text = "NVIDIA Corporation"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["robotics", "manipulation", "learning", "computer-vision", "grasping"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core PyTorch dependencies with CUDA support
    # (PyPI linux wheels for these versions are built against CUDA 12.1)
    "torch==2.1.0",
    "torchvision==0.16.0",

    # PyTorch Geometric stack (installed from the PyG find-links index, see [tool.uv])
    "torch-cluster==1.6.3",
    "torch-scatter==2.1.2",
    "torch-geometric==2.7.0",

    # Sparse conv
    "spconv-cu120==2.3.6",

    # Numerics / data
    "numpy==1.26.4",
    "scipy==1.15.3",
    "scikit-learn==1.7.2",
    "h5py==3.16.0",
    "pickle5==0.0.12",
    "webdataset==1.0.2",
    "tensordict==0.12.3",
    "sharedarray==3.2.4",

    # ML / models
    "transformers==4.48.3",
    "diffusers==0.11.1",
    "timm==1.0.15",
    "huggingface-hub==0.25.2",

    # Config / logging
    "hydra-core==1.4.0.dev1",
    "omegaconf==2.4.0.dev11",
    "addict==2.4.0",
    "tensorboard==2.20.0",
    "tensorboardx==2.6.5",

    # Geometry / mesh / robot models
    "trimesh==4.5.3",
    "yourdfpy==0.0.56",
    "scene-synthesizer[recommend]==1.15.0",
    "usd-core==26.5",

    # Rendering / visualization
    "pyrender==0.1.45",
    "PyOpenGL==3.1.0",
    "meshcat==0.3.2",
    "viser==1.0.28",
    "matplotlib==3.10.9",
    "imageio==2.37.3",
    "opencv-python==4.10.0.84",  # last line allowing numpy<2 (numpy==1.26.4 pin)
    "pillow==12.2.0",

    # ZMQ serving
    "pyzmq==27.1.0",
    "msgpack==1.1.2",
    "msgpack-numpy==0.4.8",

    # Tooling / misc
    "tqdm==4.67.3",
    "ipython==8.39.0",
    "yapf==0.40.1",
    "pytest==9.0.3",

    # Pin setuptools to a version that still includes pkg_resources
    # (required by torch==2.1.0 cpp_extension for building CUDA extensions like pointnet2_ops)
    "setuptools>=45,<78",
]

# Note: pointnet2_ops is a local dependency that must be installed separately.
# For seamless installation, use: ./install_pointnet.sh
# Or manually: cd pointnet2_ops && uv pip install --no-build-isolation .

[project.urls]
"Homepage" = "https://graspgen.github.io"
"Repository" = "https://github.com/NVlabs/GraspGen"
"Documentation" = "https://graspgen.github.io"
"Paper" = "https://arxiv.org/abs/2507.13097"
"Models" = "https://huggingface.co/adithyamurali/GraspGenModels"
"Dataset" = "https://huggingface.co/datasets/nvidia/PhysicalAI-Robotics-GraspGen"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
]
serve = [
    "pyzmq==27.1.0",
    "msgpack==1.1.2",
    "msgpack-numpy==0.4.8",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["grasp_gen*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.txt", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring a live GraspGen server on localhost:5556",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.uv]
# Allow pre-release packages (needed for pyrender -> pyglet dependencies)
prerelease = "allow"

# Use find-links for PyG packages (flat HTML page, not a PEP 503 index)
find-links = ["https://data.pyg.org/whl/torch-2.1.0+cu121.html"]

# Build dependencies for packages that need special build requirements
[tool.uv.extra-build-dependencies]
sharedarray = ["setuptools>=45,<78"]
